<resources>
    <string name="app_name">Capstone</string>
    <string name="background_content_desc">background</string>
    <string name="image_poster_content_desc">image poster</string>
    <string name="star_icon_content_desc">star icon</string>
    <string name="synopsis_text">Synopsis</string>
    <string name="info_text">Info</string>
    <string name="characters_text">Characters</string>
    <string name="reviews_text">Reviews</string>
    <string name="my_anime_suggestions_text">Top Upcoming Anime</string>
    <string name="latest_updated_episode_text">Today New Episode</string>
    <string name="favorite_button_content_desc">favorite button</string>

    <string name="alternative_titles_text">Alternative Titles</string>
    <string name="japanese_label_text">Japanese:</string>
    <string name="information_text">Information</string>
    <string name="type_label_text">Type:</string>
    <string name="episodes_label_text">Episodes:</string>
    <string name="status_label_text">Status:</string>
    <string name="aired_label_text">Aired:</string>
    <string name="duration_label_text">Duration:</string>
    <string name="rating_label_text">Rating:</string>
    <string name="character_image_content_desc">character image</string>
    <string name="voice_actor_image_content_desc">voice actor image</string>
    <string name="reviewer_image_content_desc">reviewer image</string>
    <string name="sample_reviewer_content">Here is my early review of RE: Zero, and if it lives up to it\'s previous season!  It certainly does! It really picks up where we left off, and continues as if it was more than a one season show, which is great to see from an adored show. You won\'t go wrong with picking up season two, as we\'re in for treat, and you\'ll be glad to pick it up and continue it\'s story!  The tone is what you would expect from this show, the art and the sound matching the themes of the show in general, being that they look great, but also match the read more</string>
    <string name="helpful_string_format">%1$d people vote helpful</string>
    <string name="overall_rating_string_format">Overall rating : %1$d</string>
    <string name="title_favorite">Favorite</string>
    <string name="anime_title_text">Anime</string>
    <string name="manga_title_text">Manga</string>
    <string name="search_title_text">Search</string>
    <string name="personal_title_text">Personal</string>
    <string name="personal_settings_text">Personal Settings</string>
    <string name="language_setting_icon_constent_desc">language setting icon</string>
    <string name="arrow_icon_content_desc">arrow icon</string>
    <string name="language_setting_text">Language Setting</string>
    <string name="favorite_list_text">Favorite List</string>
    <string name="select_language_text">Select Language</string>
    <string name="top_manga_text">Top Manga</string>
    <string name="top_manhwa_text">Top Manhwa</string>
    <string name="type_text">type :</string>
    <string name="score_text">score :</string>
    <string name="episode_text">episode :</string>
    <string name="rank_symbol">#</string>
    <string name="icon_content_desc">icon</string>
    <string name="resource_error_text">error when getting data</string>
    <string name="loading_text">Loading…</string>
    <string name="error_search_text">Error while searching data,\n please try again or change your keyword</string>
</resources>