<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:requiresFadingEdge="vertical"
    android:fadingEdgeLength="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.InfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/info_alternative_titles_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp"
            android:textStyle="bold"
            android:text="@string/alternative_titles_text" />
        <TextView
            android:id="@+id/info_japanese_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_alternative_titles_label"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/japanese_label_text" />
        <TextView
            android:id="@+id/info_japanese_title_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_alternative_titles_label"
            app:layout_constraintStart_toEndOf="@id/info_japanese_title_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            tools:text="呪術廻戦" />
        <TextView
            android:id="@+id/info_information_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_japanese_title_label"
            android:padding="16dp"
            android:textStyle="bold"
            android:text="@string/information_text" />

        <TextView
            android:id="@+id/info_type_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_information_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/info_japanese_title_label"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/type_label_text" />
        <TextView
            android:id="@+id/info_type_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_information_label"
            app:layout_constraintStart_toEndOf="@id/info_type_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            tools:text="TV" />

        <TextView
            android:id="@+id/info_episodes_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_type_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/info_japanese_title_label"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/episodes_label_text" />
        <TextView
            android:id="@+id/info_episodes_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_type_value"
            app:layout_constraintStart_toEndOf="@id/info_episodes_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            tools:text="24" />

        <TextView
            android:id="@+id/info_status_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_episodes_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/info_japanese_title_label"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/status_label_text" />
        <TextView
            android:id="@+id/info_status_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_episodes_value"
            app:layout_constraintStart_toEndOf="@id/info_status_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            tools:text="Currently Airing" />

        <TextView
            android:id="@+id/info_aired_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_status_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/info_japanese_title_label"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/aired_label_text" />
        <TextView
            android:id="@+id/info_aired_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_status_label"
            app:layout_constraintStart_toEndOf="@id/info_aired_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            tools:text="Oct 3, 2020 to ?" />
        <TextView
            android:id="@+id/info_duration_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_aired_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/info_japanese_title_label"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/duration_label_text" />
        <TextView
            android:id="@+id/info_duration_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_aired_label"
            app:layout_constraintStart_toEndOf="@id/info_duration_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            tools:text="23 min. per ep." />

        <TextView
            android:id="@+id/info_rating_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_duration_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/info_japanese_title_label"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/rating_label_text" />
        <TextView
            android:id="@+id/info_rating_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/info_duration_label"
            app:layout_constraintStart_toEndOf="@id/info_rating_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            tools:text="R - 17+ (violence &amp; profanity)" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>