<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <ImageView
        android:id="@+id/search_image"
        android:layout_width="100dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_poster_content_desc"
        tools:background="@color/colorPrimaryDark"
        />
    <TextView
        android:id="@+id/search_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:textColor="@color/softBlack"
        tools:text="Jujutsu Kaisen (TV)"/>
    <TextView
        android:id="@+id/search_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_title"
        app:layout_constraintStart_toEndOf="@id/search_image"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        tools:textColor="@color/softBlack"
        android:text="@string/type_text"/>
    <TextView
        android:id="@+id/search_type_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_title"
        app:layout_constraintStart_toEndOf="@id/search_type_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        tools:textColor="@color/softBlack"
        tools:text="TV"/>

    <TextView
        android:id="@+id/search_episode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_type_label"
        app:layout_constraintStart_toEndOf="@id/search_image"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        tools:textColor="@color/softBlack"
        android:text="@string/episode_text"/>
    <TextView
        android:id="@+id/search_episode_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_type_label"
        app:layout_constraintStart_toEndOf="@id/search_episode_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        tools:textColor="@color/softBlack"
        tools:text="2"/>

    <TextView
        android:id="@+id/search_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_episode_label"
        app:layout_constraintStart_toEndOf="@id/search_image"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        tools:textColor="@color/softBlack"
        android:text="@string/score_text"/>
    <TextView
        android:id="@+id/search_score_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_episode_label"
        app:layout_constraintStart_toEndOf="@id/search_score_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        tools:textColor="@color/softBlack"
        tools:text="8.6"/>
</androidx.constraintlayout.widget.ConstraintLayout>